fix(stepper): wrong spacing

--- a/projects/angular/src/accordion/stepper/_stepper.clarity.scss
+++ b/projects/angular/src/accordion/stepper/_stepper.clarity.scss
@@ -14,7 +14,7 @@
 @include mixins.exports('stepper.clarity') {
   .clr-stepper-forms {
     .clr-accordion-header-button {
-      padding: 0 0 0 tokens.$cds-global-space-7;
+      padding: 0 0 0 tokens.$cds-global-space-8;
       align-items: center;
       min-height: mixins.baselinePx(56);
     }
